syntax = "proto3";

option csharp_namespace = "Auctions.Api.Grpc";

package auctions;

message ValidateAuctionRequest {
  string auction_id = 1;
  string bidder = 2;
  int64 bid_amount_cents = 3;
}

message ValidateAuctionResponse {
  bool is_valid = 1;
  string error_code = 2;
  string error_message = 3;
  int64 current_high_bid_cents = 4;
  int64 reserve_price_cents = 5;
  string auction_end = 6;
  string seller = 7;
  string status = 8;
}

message GetAuctionDetailsRequest {
  string auction_id = 1;
}

message AuctionDetailsResponse {
  string id = 1;
  string title = 2;
  string seller = 3;
  string winner = 4;
  int64 current_high_bid_cents = 5;
  int64 reserve_price_cents = 6;
  int64 buy_now_price_cents = 7;
  string auction_end = 8;
  string status = 9;
  bool is_buy_now_available = 10;
}

message ExtendAuctionRequest {
  string auction_id = 1;
  int32 extend_minutes = 2;
  string reason = 3;
}

message ExtendAuctionResponse {
  bool success = 1;
  string new_end_time = 2;
  string error_message = 3;
}
